--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -5,12 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
-    tools:context=".presentation.ui.login.LoginFragment"
-    >
+    tools:context=".presentation.ui.login.LoginFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content">
+
         <TextView
             android:id="@+id/tvLogin"
             style="@style/bold32"
@@ -106,10 +106,11 @@
                 style="@style/regular14"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="12dp"
                 android:text="@string/atau"
                 android:textAllCaps="true"
                 android:textColor="@color/gray"
+                app:layout_constraintBottom_toTopOf="@id/btnGoogle"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/btnLogin" />
@@ -118,10 +119,10 @@
                 android:id="@+id/btnGoogle"
                 style="@style/GoogleBtn"
                 android:layout_marginHorizontal="60dp"
-                android:layout_marginTop="12dp"
                 android:elevation="5dp"
                 android:text="@string/masuk_google"
                 android:textColor="@color/black"
+                android:layout_marginTop="12dp"
                 app:backgroundTint="@color/white"
                 app:icon="@drawable/ic_google"
                 app:iconGravity="start"
@@ -154,7 +155,6 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/haveAccount"
                 app:layout_constraintTop_toBottomOf="@id/btnGoogle" />
-
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
